# DeckControllerOS

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  instructions.md  license.txt  project.md
br2-external/: Config.in  external.desc  external.mk
br2-external/package/: Config.in
checkpoints/: 01_bootable_iso_base_os.md  01_bootable_iso_base_os_plan.md  02_bluetooth_stack_pairing.md  02_bluetooth_stack_pairing_plan.md  03_5_hogp_interop_stabilization.md  03_uhid_hogp_hid_device.md  03_uhid_hogp_hid_device_plan.md  04_deck_input_to_xbox_mapping.md  04_deck_input_to_xbox_mapping_plan.md  05_slint_gui.md  05_slint_gui_plan.md  06_installer_dualboot_release.md
configs/bluez/: input.conf  main.conf
configs/buildroot/: controlleros_defconfig
configs/dev/: controlleros-bt-reset  controlleros-dev-debug  controlleros-dev-list  controlleros-dev-run  controlleros-dev-update
configs/hid/: hid.toml
configs/init/: S01gui  S20dbus-prep  S30dbus  S35bluetooth-storage  S40bluetoothd  S41bluetooth-power  S45hidd
configs/kernel/: steamdeck_defconfig
configs/mapping/: xbox.toml
crates/gui/: Cargo.toml
crates/gui/src/: bluez.rs  main.rs  system.rs
crates/gui/ui/: main.slint  theme.slint
docs/: checkpoint02_selfcheck.md  dev_testing_loops.md  hid_profile.md  hw-matrix.md  input_devices.md  mapping.md  pairing.md  storage.md
scripts/: bt_checkpoint02_selfcheck.sh  bt_checkpoint03_host_validate.sh  bt_debug_pairing_capture.sh  bt_pairing_mode.sh  bt_show_status.sh  build.sh  dev_gui_preview.sh  dev_http_serve.sh  dev_http_server.py  dev_stage_payload.sh
(+39 files in other folders)
