[package]
name = "controlleros-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "controlleros-gui"
path = "src/main.rs"

[features]
default = ["deck"]
deck = ["slint/backend-linuxkms-noseat", "dep:zbus", "dep:tokio"]
desktop = ["slint/backend-winit"]

[dependencies]
slint = { version = "=1.15.0", default-features = false, features = [
    "renderer-femtovg",
    "compat-1-2",
] }
zbus = { version = "=5.14.0", default-features = false, features = ["tokio"], optional = true }
tokio = { version = "=1.44.1", features = ["rt", "macros", "process", "time"], optional = true }
anyhow = "=1.0.100"
tracing = "=0.1.41"
tracing-subscriber = "=0.3.19"

[build-dependencies]
slint-build = "=1.15.0"
